my cool database added

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://lawcloud:wRbb0K6Kn1Z4js9T@cluster0.jbej39x.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://jeffry:FoZGX7WGfEO5zdvi@cluster0.nlikvxw.mongodb.net/?retryWrites=true&w=majority"
